# imdb_sentiment

./: .env.example  .gitignore  pyproject.toml  setup.py
imdb_sentiment/: __init__.py  __main__.py  analyzer.py
imdb_sentiment/shared/utils/: custom_dataset.py  logger.py
